src/test/deca/context/invalid/cond_if_but_class.deca
// Test of the rule 3.29 : if should have a boolean as a condition

{
    A a = new A();
    if (a){

    };
}
